@@ -1,4 +1,5 @@
 DSE backports
+ * Log endpoint and port associated with streaming operation (CASSANDRA-8777)
  * cqlsh: fix tab completion for case-sensitive identifiers (CASSANDRA-11664)
  * Don't write shadowed range tombstone (CASSANDRA-12030)
  * Reduce contention getting instances of CompositeType (CASSANDRA-10433)
